force-app/main/default/objects/Purchase_Order_Item__c/fields/Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price__c</fullName>
    <label>Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>