force-app/main/default/objects/Purchase_Order_Item__c/fields/Cost_Price_formula__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_formula__c</fullName>
    <formula>Inventory_Item__r.Cost_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Price (Item Master)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>