force-app/main/default/objects/Purchase_Order_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item Master</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Purchase Order Items</relationshipLabel>
    <relationshipName>Purchase_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>