force-app/main/default/objects/Purchase_Order_Item__c/fields/Item_Master_Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Cost_Category__c</fullName>
    <description>Item Master Cost Category</description>
    <formula>TEXT(Inventory_Item__r.Cost_Category__c)</formula>
    <label>Item Master Cost Category</label>
    <type>Text</type>
</CustomField>