force-app/main/default/objects/Purchase_Order_Item__c/fields/No_of_Items_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>No_of_Items_Cancelled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Items Cancelled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>