force-app/main/default/objects/Purchase_Order_Item__c/fields/No_of_Items_Received__c.field-meta.xml
<CustomField>
    <fullName>No_of_Items_Received__c</fullName>
    <formula>Quantity__c - (No_of_Items_Still_Pending__c +  No_of_Items_Cancelled__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Items Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>