force-app/main/default/objects/Purchase_Order_Item__c/fields/No_of_PR_Items__c.field-meta.xml
<CustomField>
    <fullName>No_of_PR_Items__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of PR Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>