force-app/main/default/objects/Purchase_Order_Item__c/fields/PO_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Item_Status__c</fullName>
    <label>PO Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Partially Fulfilled</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Non-PR Related</fullName>
                <default>true</default>
                <label>Non-PR Related</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>