force-app/main/default/objects/Purchase_Order_Item__c/fields/Recalculate_Pending_Items__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Pending_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Pending Items</label>
    <type>Checkbox</type>
</CustomField>