force-app/main/default/objects/Purchase_Order_Item__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <label>Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Code</valueSetName>
    </valueSet>
</CustomField>