force-app/main/default/objects/Purchase_Order_Item__c/fields/Total_GST_formula__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_formula__c</fullName>
    <formula>IF( ISPICKVAL( Tax_Code__c , &apos;GST on Expenses&apos; ) , 
  (Cost_Price__c * Tax_Rate__c) *  Quantity__c  ,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>