force-app/main/default/objects/Purchase_Order_Item__c/fields/Total_Price_exc_GST_formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_exc_GST_formula__c</fullName>
    <formula>Cost_Price__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price (exc GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>