force-app/main/default/objects/Purchase_Order_Item__c/fields/Total_Price_inc_GST_formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_inc_GST_formula__c</fullName>
    <formula>IF(  ISPICKVAL(  Tax_Code__c , &apos;GST on Expenses&apos;) ,
   Total_Price_exc_GST_formula__c +  Total_GST_formula__c ,
   Total_Price_exc_GST_formula__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price (inc GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>