force-app/main/default/objects/Purchase_Order_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>